...
    <string name="title_notifications">Notifications</string>
    <string name="restaurant_list">Restaurant List</string>
    <string name="map">Map</string>
    <string name="workmates">Workmates</string>
    <string name="search">Search</string>
    <string name="logo">Logo</string>
    <string name="log_in_with_email">Log In With Email</string>
    <string name="log_in_with_facebook">Log In With Facebook</string>
    <string name="log_in_with_gmail">Log In With Gmail</string>
    <string name="log_in_with_twitter">Log In WIth Twitter</string>
    <string name="log_in_with_github">Log In With GitHub</string>
    <string name="go4lunch" translatable="false">Go4Lunch</string>
    <string name="email_email_com" translatable="false">email@email.com</string>
...
